@@ -23,6 +23,7 @@ import org.sonar.api.utils.MessageException;
 import org.sonar.scanner.bootstrap.ScannerWsClient;
 import org.sonar.scanner.protocol.GsonHelper;
 import org.sonar.scanner.scan.branch.BranchInfo;
+import org.sonar.scanner.scan.branch.BranchType;
 import org.sonar.scanner.scan.branch.ProjectBranches;
 import org.sonar.scanner.scan.branch.ProjectBranchesLoader;
 import org.sonar.server.branch.ws.ProjectBranchesParameters;
@@ -48,6 +49,8 @@ public class CommunityProjectBranchesLoader implements ProjectBranchesLoader {
             String.format("/%s/%s?%s=", ProjectBranchesParameters.CONTROLLER, ProjectBranchesParameters.ACTION_LIST,
                           ProjectBranchesParameters.PARAM_PROJECT);
 
+    private static final String PROJECT_PULL_REQUESTS_URL = "/api/project_pull_requests/list?project=";
+
     private final ScannerWsClient scannerWsClient;
     private final Gson gson;
 
@@ -59,24 +62,54 @@ public class CommunityProjectBranchesLoader implements ProjectBranchesLoader {
 
     @Override
     public ProjectBranches load(String projectKey) {
+        List<BranchInfo> branches;
+
         try {
             GetRequest branchesGetRequest =
-                    new GetRequest(PROJECT_BRANCHES_URL + URLEncoder.encode(projectKey, StandardCharsets.UTF_8.name()));
+                    new GetRequest(PROJECT_BRANCHES_URL + URLEncoder.encode(projectKey, StandardCharsets.UTF_8));
             try (WsResponse branchesResponse = scannerWsClient
                     .call(branchesGetRequest); Reader reader = branchesResponse
                 .contentReader()) {
                 BranchesResponse parsedResponse = gson.fromJson(reader, BranchesResponse.class);
-                return new ProjectBranches(parsedResponse.getBranches());
+                branches = new ArrayList<>(parsedResponse.getBranches());
             }
         } catch (IOException e) {
             throw MessageException.of("Could not load branches from server", e);
         } catch (HttpException e) {
             if (404 == e.code()) {
-                return new ProjectBranches(new ArrayList<>());
+                branches = new ArrayList<>();
             } else {
                 throw MessageException.of("Could not load branches from server", e);
             }
         }
+
+        try {
+            GetRequest pullRequestsGetRequest =
+                    new GetRequest(PROJECT_PULL_REQUESTS_URL + URLEncoder.encode(projectKey, StandardCharsets.UTF_8));
+            try (WsResponse pullRequestsResponse = scannerWsClient
+                    .call(pullRequestsGetRequest); Reader reader = pullRequestsResponse
+                .contentReader()) {
+                PullRequestsResponse parsedResponse = gson.fromJson(reader, PullRequestsResponse.class);
+                for (PullRequestsResponse.PullRequest pullRequest : parsedResponse.getPullRequests()) {
+                    branches.add(
+                        new BranchInfo(
+                            pullRequest.getBranch(),
+                            BranchType.PULL_REQUEST,
+                            false,
+                            pullRequest.getTarget()
+                        )
+                    );
+                }
+            }
+        } catch (IOException e) {
+            throw MessageException.of("Could not load pull requests from server", e);
+        } catch (HttpException e) {
+            if (e.code() != 404) {
+                throw MessageException.of("Could not load pull requests from server", e);
+            }
+        }
+
+        return new ProjectBranches(branches);
     }
 
     /*package*/ static class BranchesResponse {
@@ -90,6 +123,38 @@ public class CommunityProjectBranchesLoader implements ProjectBranchesLoader {
 
         /*package*/ List<BranchInfo> getBranches() {
             return branches;
+        }
+    }
+
+    /*package*/ static class PullRequestsResponse {
+
+        private final List<PullRequest> pullRequests;
+
+        /*package*/ PullRequestsResponse(List<PullRequest> pullRequests) {
+            super();
+            this.pullRequests = pullRequests;
+        }
+
+        /*package*/ List<PullRequest> getPullRequests() {
+            return pullRequests;
+        }
+
+        /*package*/ static class PullRequest {
+            private final String branch;
+            private final String target;
+
+            /*package*/ PullRequest(String branch, String target) {
+                this.branch = branch;
+                this.target = target;
+            }
+
+            /*package*/  String getBranch() {
+                return branch;
+            }
+
+            /*package*/ String getTarget() {
+                return target;
+            }
         }
     }
 
